<resources>
    <string name="app_name">Home Automation</string>
    <string name="ipAddress">Enter Current IP</string>
    <string name="nearLights">Near Lights</string>
    <string name="kitchen">Kitchen Lights</string>
    <string name="bedroomLights">Bedroom Lights</string>
    <string name="fan">Fan</string>
    <string name="ledStrips">LED Strips</string>

<!--    add your base ip here-->
    <string name="baseIp">http://103.229.25.</string>
    <string name="enter">Enter</string>
</resources>