<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/tenDp"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currentIpInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="0.8"
                    android:hint="@string/ipAddress"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/color_temp"
                    app:boxStrokeErrorColor="@color/red400"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/currentIpEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="0dp"
                        android:backgroundTint="@color/white"
                        android:inputType="number"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                <Button-->
                <!--                    android:layout_weight="0.05"-->
                <!--                    android:id="@+id/enterButton"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/enter" />-->
            </LinearLayout>

            <TextView
                android:id="@+id/currentIpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:focusable="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardFan"
                    style="@style/MainButtonTheme">

                    <CheckBox
                        android:id="@+id/fanCheck"
                        style="@style/MainCheckBox"
                        android:button="@null"
                        android:text="@string/fan" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/bedCard"
                    style="@style/MainButtonTheme">

                    <CheckBox
                        android:id="@+id/bedCheck"
                        style="@style/MainCheckBox"
                        android:button="@null"
                        android:text="@string/bedroomLights" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/kitchenCard"
                    style="@style/MainButtonTheme">

                    <CheckBox
                        android:id="@+id/kitchenCheck"
                        style="@style/MainCheckBox"
                        android:button="@null"
                        android:text="@string/kitchen" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/LEDCard"
                    style="@style/MainButtonTheme">

                    <CheckBox
                        android:id="@+id/ledCheck"
                        style="@style/MainCheckBox"
                        android:button="@null"
                        android:text="@string/ledStrips" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>